5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1734_2508.log
== TEST (2019-05-10 16:00:17) 
-- CODE:
n int(input("Insira a quantidade de termos desejada para a serie: "))

cont = 0
pi = 3
i = 2

while(cont < n):
	pi = pi + (4/(i*(i+1)*(i+2)))
	
print(round(pi,8))
-- ERROR:
File "XXXX", line 1
    n int(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:00:30) 
-- CODE:
n = int(input("Insira a quantidade de termos desejada para a serie: "))

cont = 0
pi = 3
i = 2

while(cont < n):
	pi = pi + (4/(i*(i+1)*(i+2)))
	
print(round(pi,8))
-- ERROR:
File "XXXX", line 1
    n int(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:00:49) 
-- CODE:
n = int(input("Insira a quantidade de termos desejada para a serie: "))

cont = 0
pi = 3
i = 2

while(cont < n):
	pi = pi + (4/(i*(i+1)*(i+2)))
	cont = cont + 1
	
print(round(pi,8))
-- OUTPUT:
3.83333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:02:43) 
-- CODE:
n = int(input("Insira a quantidade de termos desejada para a serie: "))

cont = 0
pi = 3
i = 2

while(cont < n):
	pi = pi + (4/(i*(i+1)*(i+2)))
	cont = cont + 1
	i = i + 1
	
print(round(pi,8))
-- OUTPUT:
3.29761905
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:03:01) 
-- CODE:
n = int(input("Insira a quantidade de termos desejada para a serie: "))

cont = 0
pi = 3
i = 2

while(cont < n):
	pi = pi + (4/(i*(i+1)*(i+2)))
	cont = cont + 1
	i = i + 2
	
print(round(pi,8))
-- OUTPUT:
3.22049062
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:09:45) 
-- CODE:
n = int(input("Insira a quantidade de termos desejada para a serie: "))

pi = 3
i = 1

while(i < n):
	den = (i*2)*(i*2+1)*(i*2+2)
	pi = pi + (-1)**(i+1) * 4  / den
	i = i + 1
	
print(round(pi,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 16:10:37) 
-- CODE:
n = int(input("Insira a quantidade de termos desejada para a serie: "))

pi = 3
i = 1

while(i < n):
	den = (i*2)*(i*2+1)*(i*2+2)
	pi = pi + (-1)**(i+1) * 4  / den
	i = i + 1
	
print(round(pi,8))
-- EXECUTION TIME:
0.161521
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
